<resources>
    <string name="app_name" translatable="false">CGM Scanner</string>
    <string name="app_name_long" translatable="false">Child Growth Monitor Scanner App</string>
    <string name="account_type" translatable="false">de.welthungerhilfe.cgm.scanner</string>
    <string name="sync_authority" translatable="false">de.welthungerhilfe.cgm.scanner</string>
    <string name="error_login">Login failed</string>
    <string name="login_microsoft">Sign In with Microsoft</string>
    <string name="login_backend_environment">Select your organization</string>
    <string name="login_error_parse">Token Parse Failed</string>
    <string name="login_error_invalid">Couldn\'t get user email, please try again</string>
    <string name="device_check_reminder">There was no recent device check done on this device. Do you want to do it now?</string>
    <string name="device_check1">What is needed for device check?</string>
    <string name="device_check11"><b>Prepare the Image:</b>\nKeep colour printout of the image ready <b>\nSetup for Calibration:</b>\nPlace the printout on a flat surface, e.g., a table</string>
    <string name="device_check12">I have printed the calibration image and I am ready to scan it.</string>
    <string name="device_check2">- Point your camera at the image.\n- Keep phone parallel to the image.\n- Move your phone as shown in the hand below until the test passes.</string>
    <string name="device_check21">RGB camera</string>
    <string name="device_check22">ToF sensor</string>
    <string name="device_check3">Please wait until all the tests are done.</string>
    <string name="device_check31">Battery</string>
    <string name="device_check32">Device storage</string>
    <string name="device_check33">GPS</string>
    <string name="device_check34">Internet connection</string>
    <string name="device_check4">Tests ended with issues. Do you want to continue?</string>
    <string name="device_check4_rgb">Color camera detected a wrong dimensions of calibration image, this might be caused by a defect of the lenses.</string>
    <string name="device_check4_tof">ToF sensor detected a wrong dimensions of calibration image, this might be caused by a defect of the lenses.</string>
    <string name="device_check4_battery">The battery level is low, there might be not enough energy to capture a bigger amount of data.</string>
    <string name="device_check4_gps">GPS sensor was not able to determine your position. The captured data won\'t be tracked.</string>
    <string name="device_check4_storage">The device storage is low, there might be not enough space to capture a bigger amount of data.</string>
    <string name="device_check4_backend">The device wasn\'t able to connect to CGM backend. There won\'t be possible to synchronise any data.</string>
    <string name="device_check42">I take responsibility for possible issues caused by the problems above.</string>
    <string name="device_check5">You can refer to the device check from <u color="#FF0000">Menu</u> any time!</string>
    <string name="device_check_step_finished">Check step finished</string>
    <string name="device_check_detecting_image">detecting image</string>
    <string name="device_check_testing">testing</string>
    <string name="device_check_failed">failed</string>
    <string name="device_check_too_low_energy">too low energy</string>
    <string name="device_check_finish">You finished the device check</string>
    <string name="tutorial1">How do I create a new profile for the child?</string>
    <string name="tutorial11">1-1. Scan the QR code to create or find the child\'s profile</string>
    <string name="tutorial12">1-2. Fill in their personal details if the child has not been scanned before</string>
    <string name="tutorial2">How do I scan a child that is standing up?</string>
    <string name="tutorial21">2-1. Chose \"Standing up\" mode before starting to scan child</string>
    <string name="tutorial22">2-2. Take three 5 second scans, from a front view, a back view and a 360\' view</string>
    <string name="tutorial3">How do I scan a child that is lying down?</string>
    <string name="tutorial31">3-1. Choose \"Lying down\" mode before starting to scan the child</string>
    <string name="tutorial32">3-2. Take three 5 second scans, from a front view, a back view and from left side to right side</string>
    <string name="tutorial4">How do I view the results of a scan?</string>
    <string name="tutorial41">4-1. Visualise the results of the scan measurements on different graphs</string>
    <string name="tutorial42">4-2. Quickly and easily identify whether the child is likely to be malnourished</string>
    <string name="tutorial5">You can refer to the tutorial from <u color="#FF0000">Menu</u> any time!</string>
    <string name="next_tutorial">next</string>
    <string name="congratulation">Congratulations!</string>
    <string name="finish_tutorial">You finished CGM Scanner Tutorial</string>
    <string name="get_start">Get Started</string>
    <string name="username">Username</string>
    <string name="menuScans">Select Scan Device</string>
    <string name="menuDeviceCheck">Device Check</string>
    <string name="menuTutorial">Tutorial</string>
    <string name="menuSettings">Settings</string>
    <string name="menuLanguage">Language</string>
    <string name="menuLogout">Logout</string>
    <string name="menuStdTest">Quit Std Test</string>
    <string name="menu_qr">QR Search</string>
    <string name="menu_search">Search</string>
    <string name="menu_filter">Sort and Filter</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="no_scans">No scans</string>
    <string name="add_scans">To start scanning, tap [+] button</string>
    <string name="title_scans">Scans-Scheduled</string>
    <string name="data_not_synced">No permission to sync the data with the backend</string>
    <string name="logout_alert">Are you sure want to log out?</string>
    <string name="filter">Filter</string>
    <string name="sortby">Sort by</string>
    <string name="date">Date</string>
    <string name="last_days">last %1$d days</string>
    <string name="last_location_error">last location not available</string>
    <string name="sort_date">new person on top</string>
    <string name="sort_location">nearest person on top</string>
    <string name="wasting">Wasting</string>
    <string name="wasting_weight_height">lowest weight/height on top</string>
    <string name="stunting">Stunting</string>
    <string name="stunting_height_age">lowest height/age on top</string>
    <string name="no_filter">No filter</string>
    <string name="clear_filters">Clear all filters</string>
    <string name="circuit">circumcise</string>
    <string name="own_data">Only own data</string>
    <string name="created_by_self">show only children created by myself</string>
    <string name="error_network">Please check your network status. You are offline now.</string>
    <string name="error_person_first">Please register person first</string>
    <string name="error_location">Could not find matching location.</string>
    <string name="delete_measure">Do you really want to delete this measure data?</string>
    <string name="delete_person">Do you really want to delete this person data?</string>
    <string name="permission_delete">Sorry, you don\'t have permission to delete data</string>
    <string name="permission_edit">Sorry, you don\'t have permission to edit data</string>
    <string name="permission_expired">Sorry, time to allow editing is expired.</string>
    <string name="no_authorazation">Not allowed, the person data were created in a different backend.</string>
    <string name="permission_camera">"Camera permission needed!"</string>
    <string name="content_image">Content Image</string>
    <string name="message_legal">Please take photo of the signed consent form from the parents</string>
    <string name="abbr_qr">QR code : </string>
    <string name="qr_not_readable">QR Code is not readable</string>
    <string name="search_by_qr">Search by QR</string>
    <string name="scan_qr_code_desc">Scan QR code in the consent form to search a profile</string>
    <string name="std_scan_qr_code_desc">To start standardisation test, scan QR code provided by your enumerator.</string>
    <string name="std_test_will_start">This action will start standardisation test. Do you want to continue?</string>
    <string name="std_test_started">Standardisation test on this device is activated.</string>
    <string name="std_test_deactivate">Are you sure you want to deactivate the standardization test?</string>
    <string name="std_test_invalid_qrcode">Scanned standardisation test QR code is invalid.</string>
    <string name="std_test_old_qrcode">Scanned standardisation test QR code event is finished in past.</string>
    <string name="std_test_future_qrcode">Scanned standardisation test QR code event is planned in future.</string>
    <string name="retake">Retake</string>
    <string name="label_continue">Continue</string>
    <string name="error">Something went wrong</string>
    <string name="empty_qr_code">Empty QR-code, please use appropriate QR-code.</string>
    <string name="name">name of child</string>
    <string name="guardian">name of guardian</string>
    <string name="birth">birth</string>
    <string name="sex_male">male</string>
    <string name="sex_female">female</string>
    <string name="age_estimate">age is estimated</string>
    <string name="label_date">Date:</string>
    <string name="label_location">Location</string>
    <string name="address_parse_error">Could not parse address from location</string>
    <string name="ok">OK</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="next">Save</string>
    <string name="tooltip_name">Please input name</string>
    <string name="tooltip_birthday">Please input birthday</string>
    <string name="tooltip_guardian">Please input guardian</string>
    <string name="tooltipe_sex">Please select sex</string>
    <string name="tooltip_input">Please input %1$s</string>
    <string name="name_tooltip">name</string>
    <string name="birthday_tooltip">birthday</string>
    <string name="guardian_tooltip">guardian</string>
    <string name="title_image_view">Image View</string>
    <string name="age_warning">Entered child age is not between 6 months and 5 years, Are you okay with it?</string>
    <string name="contact_support">Contact support</string>
    <string name="title_settings">Settings</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="uuid">UUID</string>
    <string name="account">Account</string>
    <string name="azure_account">API Account</string>
    <string name="language">Language</string>
    <string name="lang_english">English</string>
    <string name="lang_german">Deutsch</string>
    <string name="lang_hindi">हिन्दी</string>
    <string name="lang_bangla">বাংলা</string>
    <string name="backup">Backup and support</string>
    <string name="last_backup_date">Last Backup Date</string>
    <string name="backup_now">Backup Now</string>
    <string name="test_qa_environment">Test/QA environment</string>
    <string name="performance_measurement">Performance Measurement</string>
    <string name="remote_config">Remote Config</string>
    <string name="remote_debug">Debug</string>
    <string name="remote_sync_period">Sync Period</string>
    <string name="remote_allow_delete">Allow Delete</string>
    <string name="remote_allow_edit">Allow Edit</string>
    <string name="remote_edit_time">Time To Allow Editing</string>
    <string name="remote_measure_visibility">Measure Visibility</string>
    <string name="show_depth_data">Show depth data</string>
    <string name="upload_over_wifi">Upload scans only over Wi-Fi</string>
</resources>