<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Child Growth Monitor - quick and accurate data on malnutrition
  ~ Copyright (c) 2018 Markus Matiaschek <mmatiaschek@gmail.com> for Welthungerhilfe
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorWhite">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/filter"
                android:textSize="16sp"/>

            <de.welthungerhilfe.cgm.scanner.ui.views.TwoLineTextView
                android:id="@+id/filterData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/own_data"
                app:titleTextSize="20sp"
                app:descriptionText="@string/created_by_self"
                app:separatorVisible="true"
                app:checkVisible="true" />

            <de.welthungerhilfe.cgm.scanner.ui.views.TwoLineTextView
                android:id="@+id/filterDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/date"
                app:titleTextSize="20sp"
                app:descriptionText="@string/last_days"
                app:submenuVisible="true"
                app:separatorVisible="true"
                app:checkVisible="true" />

            <de.welthungerhilfe.cgm.scanner.ui.views.TwoLineTextView
                android:id="@+id/filterLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/label_location"
                app:titleTextSize="20sp"
                app:descriptionText="@string/last_location_error"
                app:submenuVisible="true"
                app:separatorVisible="true"
                app:checkVisible="true" />

            <de.welthungerhilfe.cgm.scanner.ui.views.TwoLineTextView
                android:id="@+id/filterClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/no_filter"
                app:titleTextSize="20sp"
                app:descriptionText="@string/clear_filters"
                app:separatorVisible="true"
                app:checkVisible="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorWhite">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/sortby"
                android:textSize="16sp"/>

            <de.welthungerhilfe.cgm.scanner.ui.views.TwoLineTextView
                android:id="@+id/sortDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/date"
                app:titleTextSize="20sp"
                app:descriptionText="@string/sort_date"
                app:separatorVisible="true"
                app:checkVisible="true" />

            <de.welthungerhilfe.cgm.scanner.ui.views.TwoLineTextView
                android:id="@+id/sortLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/label_location"
                app:titleTextSize="20sp"
                app:descriptionText="@string/sort_location"
                app:separatorVisible="true"
                app:checkVisible="true" />

            <de.welthungerhilfe.cgm.scanner.ui.views.TwoLineTextView
                android:id="@+id/sortWasting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/wasting"
                app:titleTextSize="20sp"
                app:descriptionText="@string/wasting_weight_height"
                app:separatorVisible="true"
                app:checkVisible="true" />

            <de.welthungerhilfe.cgm.scanner.ui.views.TwoLineTextView
                android:id="@+id/sortStunting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/stunting"
                app:titleTextSize="20sp"
                app:descriptionText="@string/stunting_height_age"
                app:separatorVisible="true"
                app:checkVisible="true" />
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>