<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <de.welthungerhilfe.cgm.scanner.ui.views.TwoLineTextView
                android:id="@+id/settingDebug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/remote_debug"
                app:titleTextSize="20sp" />

            <de.welthungerhilfe.cgm.scanner.ui.views.TwoLineTextView
                android:id="@+id/settingSyncPeriod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/remote_sync_period"
                app:titleTextSize="20sp" />

            <de.welthungerhilfe.cgm.scanner.ui.views.TwoLineTextView
                android:id="@+id/settingAllowDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/remote_allow_delete"
                app:titleTextSize="20sp" />

            <de.welthungerhilfe.cgm.scanner.ui.views.TwoLineTextView
                android:id="@+id/settingAllowEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/remote_allow_edit"
                app:titleTextSize="20sp" />

            <de.welthungerhilfe.cgm.scanner.ui.views.TwoLineTextView
                android:id="@+id/settingEditTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/remote_edit_time"
                app:titleTextSize="20sp" />

            <de.welthungerhilfe.cgm.scanner.ui.views.TwoLineTextView
                android:id="@+id/settingMeasureVisibility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/remote_measure_visibility"
                app:titleTextSize="20sp" />

        </LinearLayout>
    </LinearLayout>
</layout>